syntax = "proto3";

package playlist_v1;

option go_package = "github.com/BelyaevEI/playlist/pkg/playlist_v1;playlist_v1";

service PlaylistV1{
    rpc AddSong(AddSongRequest) returns (Response);
    rpc DeleteSong(AddSongRequest) returns(Response);
    rpc Play(Request) returns (Response);
    rpc Pause(Request) returns (Response);
    rpc Next(Request) returns (Response);
    rpc Prev(Request) returns (Response);
}

message AddSongRequest {
    string login = 1;
    string article = 2;
    string title = 3;
    int32 duration = 4;
  }
  
message Request{
    string login = 1;
}

message Response {
    string refresh_token = 1;
  }